CD/deployment.yaml
# Create the App Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cannalogs-deployment
  namespace: cannalogs
spec:
  # How many containers to run
  replicas: 1
  selector:
    matchLabels:
      app: cannalogs
  template:
    metadata:
      labels:
        app: cannalogs
    spec:
    # Specify the container
      containers:      
        - name: cannalogs
          image: prengineer/cannalogs:latest
          resources:
            # Set the limits
            limits:
              memory: "500Mi"
              cpu: "1000m"
          ports:
            - name: httpport
              containerPort: 80
          # Mount the volumes
          volumeMounts:
          # Contains the config file
          - mountPath: "/config"
            name: cannalogs-pv-storage1
          # Contains the photos location
          - mountPath: "/app/photos"
            name: cannalogs-pv-storage2
      # Specify the persistent volumes to associate with each claim
      volumes:
      - name: cannalogs-pv-storage1
        persistentVolumeClaim:
          claimName: cannalogs-pv-claim1
      - name: cannalogs-pv-storage2
        persistentVolumeClaim:
          claimName: cannalogs-pv-claim2
