CD/service.yaml
# Create the Exposed App Service

apiVersion: v1
kind: Service
metadata:
  name: cannalogs
  namespace: cannalogs
spec:
  selector:
    app: cannalogs
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
